--- a/makeReview.html
+++ b/makeReview.html
@@ -8,9 +8,11 @@
 <meta name="description" content="O site preferido dos empregados e dos chefes"/>
 <meta name="keywords" content="trabalho, informação, dinheiro, chefe, qualifição"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-
-<!---Bootstrap CSS---->
+<!---JS---->
+<script src="js/t.js"></script>
+<!---CSS---->
 <link href="style.css" rel="stylesheet">
+<!---Bootstrap CSS---->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <!-------------->
 </head>
@@ -48,9 +50,60 @@
 	</nav>
 
 	<header>
-		<center><h1>HOW IS MY BOSS</h1></center>
+		<figure>
+			<center>
+				<img id="himbLogo" src="img/howismybossLogo.png">
+			</center>
+		</figure>
 	</header>
+	
+	<div id="ff-compose"></div>
+	<script async defer src="https://formfacade.com/include/102440692691385919942/form/1FAIpQLSdQOQeaKIGOHbsH6LFbtrpdBROONMQO3fHSG5vTU9XAq2cCaw/classic.js?div=ff-compose"></script>
+	
 
+	<!---FORM ROW 1 !---->
+	<!---
+	<section id="formSection">
+	<div id="formDivRow1">
+		<center>
+			<form name="newReview" id="newReview" method="get">
+				<p class="formP" id="name">Primeiro e segundo nome</p>
+					<input class ="inputForm" type="text">
+				<p class="formP" id="actualWork">Nome da empresa ou negocio onde trabalhou</p>
+					<input class ="inputForm" type="text">
+				<p class="formP" id="placeWork">Pais e cidade da empresa ou negocio</p>
+					<input class ="inputForm" type="text">
+				<p class="formP" id="actualWorkQ">Esta a trabalhar atualmente nesta empresa?</p>
+					<input class ="inputForm" type="text">
+				<p class="formP" id="positionWork">Cargo ou função no trabalho</p>
+					<input class ="inputForm" type="text">
+			</form>
+		</center>
+	</div>
+
+	FORM ROW 2!---->
+	<!---
+	<div id="formDivRow2">
+		<center>
+			<form name="newReview" id="newReview" method="get">
+				<p class="formP" id="expWork">Como considera sua experiência nessa posição?</p>
+					<input class ="inputForm" type="text">
+				<p class="formP" id="environmentWork">Como classificaria o ambiente de trabalho?</p>
+					<input class ="inputForm" type="text">
+				<p class="formP" id="effortSalary">Como considera a relação esforço / salário?</p>
+					<input class ="inputForm" type="text">
+				<p class="formP" id="bossRelationship">Como classificaria a relação de emprego com seu chefe?</p>
+					<input class ="inputForm" type="text">
+				<p class="formP" id="conflictWork">Houve situações adversas ou conflitos com pessoas em posições mais altas?</p>
+					<input class ="inputForm" type="text">
+				<p class="formP" id="recomendWork">Recomendaria o trabalho a outra pessoa?</p>
+					<input class ="inputForm" type="text">
+			</form>
+		</center>
+	</div>
+			<center><input id ="bSubmit" type="submit"></center>
+	</section>
+	--->
 
 	<aside>
 		<!-Nothing yet.!>
