--- a/searchReview.html
+++ b/searchReview.html
@@ -2,44 +2,46 @@
 <html lang="pt">
 
 <head>
-<title>HIMB - Procurar</title>
+<title>How is my boss</title>
 <meta charset="utf-8"/>
 <meta charset="iso-8559-1"/>
 <meta name="description" content="O site preferido dos empregados e dos chefes"/>
 <meta name="keywords" content="trabalho, informação, dinheiro, chefe, qualifição"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-
-<!---Bootstrap CSS---->
+<!---JS---->
+<script src="js/t.js"></script>
+<!---CSS---->
 <link href="style.css" rel="stylesheet">
+<!---Bootstrap CSS---->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-<!-------------->
+<!--------------->
 </head>
 
-<body>
+<body style="background-image:url('img/bg2.jpg')">
 
 	<nav>
 		<ul>
-			<li><button type="button" class="btn btn-primary">Inicio</button></li>
+			<li><button id="bMain" type="button" class="btn btn-primary">Inicio</button></li>
 
-			<li><button type="button" class="btn btn-primary">Procurar critica
+			<li><button id="bSearchReview" type="button" class="btn btn-primary">Procurar critica
 				<!--BT icon-->
 				<svg width="1.1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   				<path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
   				<path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/> </svg></button></li>
 
-			<li><button type="button" class="btn btn-primary">Fazer critica
+			<li><button id="bMakeReview" type="button" class="btn btn-primary">Fazer critica
 				<!--BT icon-->
 				<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-square" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   				<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
  	 			<path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/> </svg> </button></li>
 
-			<li><button type="button" class="btn btn-primary">Quem somos? 
+			<li><button id="bWhoWeAre" type="button" class="btn btn-primary">Quem somos? 
 				<!--BT icon-->
 				<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-briefcase-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   				<path fill-rule="evenodd" d="M0 12.5A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5V6.85L8.129 8.947a.5.5 0 0 1-.258 0L0 6.85v5.65z"/>
   				<path fill-rule="evenodd" d="M0 4.5A1.5 1.5 0 0 1 1.5 3h13A1.5 1.5 0 0 1 16 4.5v1.384l-7.614 2.03a1.5 1.5 0 0 1-.772 0L0 5.884V4.5zm5-2A1.5 1.5 0 0 1 6.5 1h3A1.5 1.5 0 0 1 11 2.5V3h-1v-.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5V3H5v-.5z"/> </svg></button></li>
 
-			<li id="liContact"><button type="button" class="btn btn-primary">Contactos 				
+			<li><button type="button" class="btn btn-primary">Contactos 				
 				<!--BT icon-->
 				<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-telephone-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   				<path fill-rule="evenodd" d="M2.267.98a1.636 1.636 0 0 1 2.448.152l1.681 2.162c.309.396.418.913.296 1.4l-.513 2.053a.636.636 0 0 0 .167.604L8.65 9.654a.636.636 0 0 0 .604.167l2.052-.513a1.636 1.636 0 0 1 1.401.296l2.162 1.681c.777.604.849 1.753.153 2.448l-.97.97c-.693.693-1.73.998-2.697.658a17.47 17.47 0 0 1-6.571-4.144A17.47 17.47 0 0 1 .639 4.646c-.34-.967-.035-2.004.658-2.698l.97-.969z"/> </svg> </li></button>
@@ -47,26 +49,31 @@
 		<br>
 	</nav>
 
+
+<section id="mainSearchSection">
 	<header>
-		<center><h1>HOW IS MY BOSS</h1></center>
+		<figure>
+			<center>
+				<img  id="himbLogo" src="img/howismybossLogo.png">
+			</center>
+		</figure>
 	</header>
 
 	<section class="searchBarSection">
-		<input type="Procurar..." class="searchBar"/>
+		<input type="search" autofocus placeholder="Procurar..." class="searchBar"/>
+		<button class="sendSearchButton">🔎</button>
 		<button class="filterButton">FILTROS</button>
 	</section>
+</section>
 
 	<aside>
 		<!-Nothing yet.!>
 	</aside>
 
-
+	
 
 	<footer>
-		<br>
-		<br>
-		<br>
-		<br>
+		<br><br><br>
 		<small>© <b><em>Jhon Aguiar & Camila Macedo</b></em></small>	
 		<address>howismyboss@hotmail.com | howismyboss.enterprise@gmail.com</address>
 	</footer>	
